# SnapperML

./: .dockerignore  .env  .gitignore  .gitmodules  .readthedocs.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  api.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yaml
config/: plotting.yaml
config/experiments/: example_seed_logging.yaml  sample.yaml  sample_csv.yaml  sample_hyperparameter_tuning.yaml  sample_root.yaml
docker/: .envdocker  Dockerfile  ROOT.Dockerfile  docker-compose.yaml  myentrypoint.sh  requirements.txt  start_mlflow_server.sh
docker/nginx/: nginx.conf
docs/: 1-objectives.md  Makefile  api.md  concepts.md  configuration.md  generate_cli_docs.sh  getting_started.md  metadata.yaml  package-lock.json  requirements.txt  yaml_reference.md
docs/output/: thesis.html
docs/source/: 01_title_page.md  03_list_of_figures.md  1-objectives.md  2-introduction.md  2_1-fundamentals.md  5-framework-design.md  6-autoencoder-design.md  cli_reference.md  conf.py  experiment_specification.md  experiment_specification.rst  hyperparameter_tuning.md  hyperparameter_tuning.rst  index.rst  installation.md  installation.rst  package_reference.rst  references.bib  running_first_experiment.md  running_first_experiment.rst
docs/source/reference/: modules.rst  (+5 more)
docs/style/: template.tex
examples/: requirements.txt  test_seed_logging.py  train_autoencoder.py  train_mlp.py  train_simple_autoencoder.py  train_svm.py  train_vae.py  train_xgboost.py
examples/experiments/: autoencoder_v1.yaml  autoencoder_v2.yaml  autoencoder_vae.yaml  example_seed_logging.yaml  mlp.yaml  mlp_one_cycle_with_bn.yaml  mlp_wide.yaml  sample.yaml  sample_hyperparameter_tuning.yaml  sample_root.yaml  svm.yaml  xgboost.yaml
examples/utils/: data.py
ml_experiment/: __init__.py  cli.py  exceptions.py  experiments.py  logging.py  mlflow.py  utils.py
ml_experiment/callbacks/: core.py  notifiers.py
ml_experiment/config/: __init__.py  models.py
ml_experiment/optuna/: __init__.py  types.py
ml_experiment/scripts/: run_experiment.py
modelling/: mlp.py  train_autoencoder.py  train_mlp.py  train_svm.py  train_vae.py  train_xgboost.py
modelling/experiments/: autoencoder_v1.yaml  autoencoder_v2.yaml  mlp.yaml  mlp_wide.yaml  svm.yaml  xgboost.yaml
modelling/utils/: data.py  one_cycle.py
scripts/: run_experiment.py
snapper_ml/: Makefile  __init__.py  api.py  data.py  experiments.py  google_cloud.py  integrations.py  loggings.py  mlflow.py  utils.py
snapper_ml/UI/: README.md  index.html  package-lock.json  package.json  styles.css
snapper_ml/callbacks/: __init__.py  core.py  notifiers.py
snapper_ml/config/: __init__.py  models.py
snapper_ml/docker/: Dockerfile  start_mlflow_server-local.sh  start_mlflow_server.sh
snapper_ml/optuna/: __init__.py  types.py
snapper_ml/scripts/: run_experiment.py
src/data/: Dockerfile  export_data_X1.py  make_dataset_integrals.py
src/models/: test_root_input.py  test_seed_logging.py  train_model.py  train_simple_autoencoder.py
src/utils/: cli.py  config.py  exceptions.py  experiments.py  google_cloud.py  input.py  logging.py  mlflow.py  monkey_patch.py  root_helper.py
tests/: test_api.py
thesis/: Makefile  My Library.yaml  abbreviations.json  bibliography.yaml  package-lock.json  package.json
thesis/antonio_molner_domenech/: Makefile  package.json
thesis/output/: thesis.tex
thesis/source/: 01_title_page.md  02_table_of_contents.md  03_list_of_figures.md  04_list_of_tables.md  1-objectives.md  2-introduction.md  2_1-fundamentals.md  3-planning.md  4-budget.md  5-framework-design.md  6-experiments.md  7-experiments.md  8-appendix.md  8-user-manual.md  99-references.md  references.yaml
thesis/style/: preamble.tex  template.tex  univ_logo.eps
website/: sidebars.json  siteConfig.js
(+48 files in other folders)
