[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snapper-ml"
version = "0.4.1"
description = "A framework for reproducible machine learning"
readme = "README.md"
authors = [
    { name = "Antonio Molner Domenech", email = "antonio.molner@correo.ugr.es" },
    { name = "Yeray López Ramírez", email = "ylopezramirez@correo.ugr.es" },
]
license = { text = "MIT License" }
requires-python = ">=3.12"
keywords = ["machine learning", "reproducibility", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "docker>=7.1.0",
    "EasyProcess>=1.1",
    "mlflow>=2.17.2",
    "gorilla>=0.4.0",
    "optuna>=4.0.0",
    "docstring-parser>=0.16",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "ray>=2.38.0",
    "PyYAML>=6.0.2",
    "pytictoc>=1.5.3",
    "coloredlogs>=15.0.1",
    "py-cpuinfo>=9.0.0",
    "typer>=0.13.0",
    "pystache>=0.6.5",
    "shellingham>=1.5.4",
    "ruamel.yaml>=0.18.6",
    "knockknock>=0.1.8.1",
    "colorama>=0.4.6",
    "termcolor>=2.5.0",
    "mysqlclient>=2.2.5",
    "numpy>=2.1.3",
    "psycopg2>=2.9.10",
    "flask_cors>=5.0.0",
    "google-api-python-client",
    "optuna-integration",
]

[project.urls]
homepage = "https://github.com/SnapperML/SnapperML"

[tool.setuptools.packages.find]
include = ["snapper_ml", "snapper_ml.*"]
exclude = [
    "logs",
    "docker",
    "thesis",
    "mlruns",
    "artifacts",
    "snapper_ml.UI.node_modules.*",
]

[project.optional-dependencies]
dev = ["pytest", "tox", "black"]

[project.scripts]
snapper-ml = "snapper_ml.scripts.run_experiment:app"

[tool.setuptools.package-data]
"snapper_ml" = [
    "../docs/assets/*",
    "../Makefile",
    "../docker/*",
    "../.env",
    "../docker/.envdocker",
    "UI/**",
]

[tool.setuptools.exclude-package-data]
"snapper_ml" = ["UI/node_modules/**"]
